# curatorx

./: .coverage  .coveragerc  .dockerignore  .env.example  .env.qa.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  TESTING.md  ca_profile.xml  curatorx.code-workspace  docker-compose.qa.yml  docker-compose.yml  mcp.json  package-lock.json  package.json  playwright.config.ts  playwright.qa.config.ts  pyproject.toml
.cursor/rules/: docs-style.mdc  e2e-port-8788.mdc  release.mdc
.github/workflows/: ci.yml  lint.yml
config/: .gitignore  settings.example.json
curatorx/: __init__.py  _version.py  access_requests.py  config_store.py  logging_config.py
curatorx/acquire/: __init__.py
curatorx/agent/: curator.py  tools.py
curatorx/agent/providers/: __init__.py
curatorx/agent/tools/: __init__.py  _definitions.py
curatorx/connectors/: __init__.py  arr_errors.py  fanart.py  http.py  omdb.py  plex.py  plex_account.py  plex_collections.py  radarr.py  seerr.py  sonarr.py  tautulli.py  tmdb.py  tvdb.py  wikipedia.py
curatorx/digest/: __init__.py  service.py
curatorx/engagement/: __init__.py
curatorx/lists/: __init__.py
curatorx/mail/: __init__.py  transport.py
curatorx/mcp/: __init__.py  __main__.py  http.py  mode.py  server.py
curatorx/memory/: __init__.py  service.py
curatorx/models/: __init__.py  recommendation.py  schemas.py
curatorx/notifications/: __init__.py  arrivals.py  newsletters.py  nudges.py  service.py
curatorx/persona/: __init__.py  presets.py  prompt.py
curatorx/preferences/: __init__.py  purge.py  store.py
curatorx/privacy/: __init__.py  schema.py
curatorx/research/: __init__.py  title_research.py
curatorx/reviews/: __init__.py  plex_sync.py  store.py
curatorx/scheduler/: __init__.py  autotune.py  bootstrap.py  engine.py  progress.py  run_history.py  run_log.py  run_outcome.py
curatorx/scheduler/tasks/: __init__.py  anniversary_scanner.py  arrival_notifications.py  data_retention.py  enthusiast_nudge.py  entity_memory_enrichment.py  gap_analysis.py  health_metrics.py  keyword_theme_tagging.py  llm_logline_enrichment.py  llm_theme_tagging.py  long_synopsis_enrichment.py  member_newsletter.py  member_weekly_rail.py  metadata_enrichment.py  owner_monthly_curation.py  plot_neighbors.py  purge_candidates.py  recommendation_warmup.py  semantic_embeddings.py  summary_motifs.py  taste_refresh.py  title_relations_refresh.py  weekly_digest.py
curatorx/syllabus/: __init__.py
curatorx/taste/: __init__.py
curatorx/telemetry/: __init__.py  ingestion.py
curatorx/watchlist/: __init__.py  crypto.py  curate.py  plex_discover.py  plex_sync.py
curatorx/web/: __main__.py  app.py  auth.py  avatars.py  job_progress.py  jobs.py  library_privacy.py  rate_limit.py  session_tokens.py  setup.py  sync_schedule.py  webhooks.py
curatorx/youth/: __init__.py  apply.py  guardrails.py  rating_gate.py
docs/: ABOUT.md  ARCHITECTURE.md  CONFIGURATION.md  CURATOR_KNOWLEDGE.md  DATA_MODEL.md  DELIGHT-WISHLIST.md  DESIGN-curator-memory.md  DESIGN.md  DOCKER.md  DOCS_STYLE.md  FAQ.md  HELP.md  MCP.md  ONBOARDING.md  PRIVACY.md  RELEASE.md  SECURITY.md  TESTING.md  WEB_UI.md  curatorx_prd.md
docs/archive/: DESIGN-curator-memory.md  README.md  curatorx_prd.md
docs/incidents/: 2026-07-simpsley-research-defect.md
docs/security/pentests/: PROTOCOL.md  README.md
docs/wiki/: Configuration.md  FAQ.md  Home.md  Installation.md  Library-Sync.md  Multi-User.md  Seerr.md  Troubleshooting.md  Unraid.md
e2e/: auth.setup.ts  ca-release.spec.ts  chat.spec.ts  collections.spec.ts  config-maintenance.spec.ts  config-wizard.spec.ts  drag-to-dock.spec.ts  explore.spec.ts  live-roles.spec.ts  live.spec.ts  login.spec.ts  person-tag-browse.spec.ts  privacy.spec.ts  recommendations-inbox.spec.ts  review-conflict.spec.ts  setup-banner.spec.ts  theme.spec.ts  title-cards.spec.ts
e2e/fixtures/: api-mocks.ts  auth-roles.ts  helpers.ts  selectors.ts
frontend/: .c8rc.json  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: release-notes.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: AddActionBanner.jsx  AdvancedSettings.jsx  AgentAvatar.jsx  AppNav.jsx  BackLink.jsx  BulkActionProgress.jsx  BulkLibraryDeleteDialog.jsx  ChatThread.jsx  ConfirmAllButton.jsx  CourseAuthoringPanel.jsx  CuratorXBrand.jsx  HelpHint.jsx  (+54 more)
mediacurator/: __init__.py  config_store.py
mediacurator/agent/: curator.py  tools.py
mediacurator/connectors/: __init__.py  fanart.py  http.py  plex.py  radarr.py  sonarr.py  tautulli.py  tmdb.py  tvdb.py
mediacurator/models/: __init__.py  schemas.py
mediacurator/preferences/: __init__.py  purge.py  store.py
mediacurator/web/: __main__.py  app.py  jobs.py  setup.py
scripts/: dev-server.ps1  docker-entrypoint.sh  docker-release.sh  generate-release-notes.sh  run-e2e.ps1  run-e2e.sh  seed-qa-roles.sh  setup-dev.ps1  start-e2e-server.mjs  start-e2e-server.sh  unraid-force-pull.sh  unraid-rollout.sh
templates/: curatorx.xml  mediacurator.xml
tests/: conftest.py  test_agent_delight.py  test_agent_tools.py  test_agent_tools_validation.py  test_anniversary_scanner.py  test_anthropic_provider.py  test_api_authz.py  test_api_contract.py  test_arr_errors.py  test_auth.py  test_avatars.py  test_ca_release.py  test_circuit_breaker.py  test_collections.py  test_config_store.py  test_connectors.py  test_crypto.py  test_curated_lists.py  test_curator.py  test_data_retention.py  test_db_query_validation.py  test_delight_phase5.py  test_durable_jobs.py  test_embeddings.py  test_error_sanitization.py  test_explore_wave3.py  test_external_search_api.py  test_facet_search.py  test_grooming_undo.py  test_guest_tour_flag.py  test_idle_bootstrap.py  test_job_progress.py  test_keyword_theme_tagging.py  test_library_db.py  test_library_episodes.py  test_library_facets.py  test_library_health.py  test_library_items_delete.py  test_library_metadata_enrichment.py  test_library_privacy.py  (+69 more)
unraid/: ca_profile.xml  curatorx.xml  mediacurator.xml
(+245 files in other folders)
