[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "curatorx"
version = "1.8.30"
description = "Agentic Plex collection curator with BYOP LLM, RAG, and Radarr/Sonarr integration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "romwil" }]
keywords = ["plex", "radarr", "sonarr", "media", "curator", "ai", "unraid"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
]

mcp = [
    "mcp>=1.0.0",
]

dev = [
    "coverage>=7.0",
    "pytest-cov>=7.0",
]

[project.urls]
Homepage = "https://github.com/romwil/curatorx"
Repository = "https://github.com/romwil/curatorx"
Issues = "https://github.com/romwil/curatorx/issues"

[project.scripts]
curatorx-web = "curatorx.web.__main__:main"
curatorx-mcp = "curatorx.mcp.server:main"

[tool.pytest.ini_options]
addopts = "--cov=curatorx --cov-report=term-missing --cov-fail-under=10"

[tool.setuptools.packages.find]
where = ["."]
include = ["curatorx*"]

[tool.setuptools.package-data]
"curatorx.web" = ["static/**/*"]
